# ws_chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
backend/: main.py
backend/api/: router.py
backend/api/dependencies/: auth.py  db.py
backend/api/v1/: auth.py
backend/core/: settings.py
backend/db/: events.py
backend/db/models/: users.py
backend/schemas/: users.py
backend/services/: manager.py
chat/: main.py
chat/api/: router.py
chat/api/dependencies/: auth.py  chat.py  db.py
chat/api/v1/: auth.py  chat.py
chat/core/: settings.py
chat/db/: events.py
chat/db/models/: __init__.py  chat.py  users.py
chat/schemas/: chat.py  users.py
chat/services/: chat.py  manager.py
client/: script.js  style.css
client/templates/: chat.html  index.html
