[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["neekrasov <neekrasov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
motor = "^3.1.1"
redis = "^4.3.4"
black = "^22.10.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
orjson = "^3.8.1"
beanie = "^1.13.1"
fastapi-users = {extras = ["beanie", "redis"], version = "^10.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
